--- a/gpacalculator.html
+++ b/gpacalculator.html
@@ -13,7 +13,7 @@
             <a class="nav-item" href="programdescription.html">Program Description</a>
             <a class="nav-item" href="teachingassistance.html">Teaching Assistance</a>
             <a class="logo" href="#home"><img src="./assets/siteimages/logo.png" class="main-logo"></a>
-            <a class="nav-item" href="gpacalucator.html">GPA Calcuator</a>
+            <a class="nav-item" href="gpacalculator.html">GPA Calcuator</a>
             <a class="nav-item" href="programsofstudy.html">Programs of Study</a>
             <a class="nav-item" href="contactus.html">Contact Us</a>
             
